--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </article>
     </template>
 
-    <script src="scripts/main.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
